--- a/elm-compiler.cabal
+++ b/elm-compiler.cabal
@@ -136,6 +136,8 @@ Library
         binary >= 0.7.0.0 && < 0.8,
         bytestring >= 0.9 && < 0.11,
         containers >= 0.3 && < 0.6,
+        deepseq,
+        deepseq-generics,
         directory >= 1.0 && < 2.0,
         edit-distance >= 0.2 && < 0.3,
         filepath >= 1 && < 2.0,
@@ -207,6 +209,8 @@ Test-Suite compiler-tests
         bytestring >= 0.9 && < 0.11,
         containers >= 0.3 && < 0.6,
         directory >= 1.0 && < 2.0,
+        deepseq,
+        deepseq-generics,
         edit-distance >= 0.2 && < 0.3,
         elm-compiler,
         filemanip >= 0.3.5 && < 0.4,
